[package]
name = "aspen_halls_desktop"
version = "0.0.1"
authors = ["Taylor Smith <aspenhalls.org@gmail.com>"]
edition = "2021"
description = "Aspen Halls desktop launcher"
documentation = "https://github.com/Hellzbellz123/AspenHalls/blob/main/README.md"
homepage = "https://hellzbellz123.github.io/AspenHalls/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Hellzbellz123/VanillaCoffee/"
keywords = ["videogame", "game", "application", "bin"]
categories = ["games"]
default-run = "aspen_halls_desktop"

[lints]
workspace = true

[features]
develop = ["aspenlib/develop"]
dynamic = ["aspenlib/dynamic"]
trace = ["aspenlib/trace"]

[dependencies]
bevy ={ version = "*"}
bevy_egui = { version = "*", default-features = false, features = [
  "default_fonts",
  "manage_clipboard",
] }
aspenlib = { path = "../aspenlib" }
toml = { version = "0.8" }
human-panic ="1.2.2"

