[package]
name = "aspen_halls_wasm"
description = "aspen halls wasm launcher using trunk"
version = "0.0.1"
authors = ["Taylor Smith <aspenhalls.org@gmail.com>"]
edition = "2021"
documentation = "https://github.com/Hellzbellz123/AspenHalls/blob/main/README.md"
homepage = "https://hellzbellz123.github.io/AspenHalls/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Hellzbellz123/VanillaCoffee/"
keywords = ["videogame", "game", "application", "bin"]
categories = ["games"]

[lints]
workspace = true

[features]
default = []
develop = ["aspenlib/develop", "dep:wasm-logger"]
trace = ["aspenlib/trace"]

[dependencies]
bevy = { version = "*", features = [
  "webgl2", # webgl2 shaders
] }
log = { version = "*" }
aspenlib = { path = "../aspenlib" }
yew = { version = "0.21.0", features = ["csr"] }
wasm-logger = { version = "0.2.0", optional = true }
web-sys = { version = "0.3.64", features = ["Document", "Navigator", "Window"] }
