[package]
name = "bevy_mod_logfu"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Hellzbellz123/bevy_mod_logfu"
categories = [
  "bevy",
  "logging",
  "gamedev",
  "plugin",
]
description = "Custom bevy logging implementation with file logging"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = ["tracing-error"]
trace_tracy_memory = ["dep:tracy-client"]
trace_tracy = []

[dependencies]
bevy_app = { version = "0.12.0" }
bevy_utils = { version = "0.12.0" }
bevy_ecs = { version = "0.12.0" }

tracing-subscriber = { version = "0.3.1", features = [
  "registry",
  "env-filter",
] }
tracing-chrome = { version = "0.7.0", optional = true }
tracing-log = "0.1.4"
tracing-error = { version = "0.2.0", optional = true }
tracing-tracy = { version = "0.10.4", optional = true }
tracy-client = { version = "0.16.4", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"
