[package]
name = "aspen_halls_native"
version = "0.0.1"
authors = [
  "Taylor Smith <aspenhalls.org@gmail.com>",
]
edition = "2021"
description = "Aspen Halls desktop launcher"
documentation = "https://github.com/Hellzbellz123/AspenHalls/blob/main/README.md"
homepage = "https://hellzbellz123.github.io/AspenHalls/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Hellzbellz123/VanillaCoffee/"
keywords = [
  "videogame",
  "game",
  "application",
  "bin",
]
categories = ["games"]
workspace = "../.."
default-run = "aspen_halls_native"

[features]
develop = ["aspen_lib/develop"]
dynamic = ["aspen_lib/dynamic"]
trace = ["aspen_lib/trace"]

[dependencies]
aspen_lib = { path = "../.." }
toml = { version = "0.8" }
