[package]
name = "aspen_halls_wasm"
version = "0.0.1"
authors = ["Taylor Smith <aspenhalls.org@gmail.com>"]
edition = "2021"

workspace = "../.."

[features]
default = []
inspect = ["aspen_halls_game/inspect", "wasm-logger"]

[dependencies]
bevy.workspace = true
log.workspace = true
aspen_halls_game = { path = "../.." }
yew = { version = "0.20", features = ["csr"] }

wasm-logger = { version = "0.2.0", optional = true }
web-sys = { version = "0.3.64", features = ["Document", "Navigator", "Window"] }
